# src/index.ts
@@ -5,6 +5,7 @@ import { invitationsResend } from "./routes/invitations.resend";
 import { invitationsVerify } from "./routes/invitations.verify";
 import type { Env } from "./types/env";
 import { HttpError } from "./utils/errors";
+import { githubWebhook } from "./webhooks/github";
 
 const app = new Hono<{ Bindings: Env }>().basePath("/v1");
 
@@ -25,5 +26,6 @@ app.route("/", health);
 app.route("/", invitationsCreate);
 app.route("/", invitationsResend);
 app.route("/", invitationsVerify);
+app.route("/", githubWebhook);
 
 export default app;
